PC version release

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/deezer-v1/img/favicon.png">
     <title>Deezer</title>
 </head>
 <body>
@@ -38,53 +39,314 @@
         </section>
 
         <section class="phone">
-            <article class="container">
-                <img src="/deezer-v1/img/phone.jpg" alt="Phone" width="200px">
-                <h2>Deezer, c'est quoi ?</h2>
-                    <article class="info">
-                        <h3>Toute votre musique dans votre poche.</h3>
-                        <p>Parmi 73 millions de titres, retrouvez de vielles connaissances et laissez-vous seduire par de nouveaux coups de couer</p>
-                        <h3>Pas de WIFI? Pas de probleme.</h3>
-                        <p>Avec Deezer Premium, vous n'avez pas besoin d'etre connecte a internet pour profiter de votre musique preferee.</p>
-                        <h3>Creez votre biblotheque musicale.</h3>
-                        <p>Rechercher parmi des millions de titres pour creer vos propres playlists et emportez-les partout avec vous.</p>
-                        <h3>Un Deezer qui vous ressemble.</h3>
-                        <p>Flow apprend a connaitre ce que vous aimez et ce que vous n'aimez pas. Decouvrez votre bande-son personnalisee.</p>
-                    </article>    
-            </article>
+            <div class="container">
+                <img src="/deezer-v1/img/phone.jpg" alt="Phone" width="250px">
+                    <h2>Deezer, c'est quoi ?</h2>
+                     <div class="phone_text">
+                        <article>
+                            <h3>Toute votre musique dans votre poche.</h3><br>
+                         <p>Parmi 73 millions de titres, retrouvez de vielles connaissances et laissez-vous séduire par de nouveaux coups de couer</p>
+                        </article>    
+                        <article>
+                            <h3>Pas de WIFI? Pas de probleme.</h3><br>
+                            <p>Avec Deezer Prenium, Vous n'avez pas besoin d'être connecté à internet pour profiter de votre musique préférée.</p>
+                        </article>
+                        <article>
+                            <h3>Créez votre biblotheque musicale.</h3><br>
+                            <p>Rechercher parmi des millions de titres pour créer vos propres playlists et emportez-les partout avec vous.</p>
+                        </article>
+                        <article>
+                            <h3>Un Deezer qui vous ressemble.</h3><br>
+                            <p>Flow apprend à connaître ce que vous aimez et ce que vous n'aimez pas/ Découvrez votre bande-son personnalisée.</p>
+                        </article>
+                    </div>    
+            </div>
         </section>
 
         <section class="icons">
-            <article class="container">
-            <article>
-                img
+            <article class="container_ic">
+            <article class="icons_inner">
+                <img src="/deezer-v1/img/laptop.png" alt="Laptop" width="50px">
+                <img src="/deezer-v1/img/device.png" alt="Device" width="50px">
+                <img src="/deezer-v1/img/watch.png" alt="Watch" width="50px">
+                <img src="/deezer-v1/img/loudspeaker.png" alt="Speakers" width="50px">
+                <img src="/deezer-v1/img/tv-monitor.png" alt="TV" width="50px">
+                <img src="/deezer-v1/img/electric-car.png" alt="Car" width="50px">
             </article>
             <article class="text">
                     <h2>Toujours avec vous</h2><br>
-                    <p>De votre footing matinal jusqu'au diner du soir, votre musique vous suit partout avec Deezer Premium. Disponible tout le temps, sur tous vos appareils, meme sans WIFI ni 4G.</p>
+                    <p>De votre footing matinal jusqu'au dîner du soir, votre musique vous suit partout avec Deezer Prenium. Disponible tout le temps, sur tous vos appareils, même sans WIFI ni 4G.</p>
             </article>
             </article>
         </section>
 
         <section class="tarif">
-            <h2>Profitez de votre musique</h2>
-            <p>recommande</p>
-            img_icon
-            <article></article>
-            <article></article>
-            <article></article>
-            <p>description</p>
+            <article class="tarif_title">
+                <h3>Profitez de votre musique</h3>
+                <p>recommandé</p>
+                <img src="/deezer-v1/img/down.png" alt="Down" width="20px">
+            </article>       
+            <div class="tarif_desc">
+
+                <article class="gratuit">
+                    <h3 class="gratuit_title">Deezer Gratuit</h3>
+                    <h3 class="gratuit_price">0,00 €</h3>
+                    <p class="gratuit_month">/mois</p>
+                    <ul class="greycontent gratuit_margin" class="gratuit_ul">
+                        <li>                           
+                            <p class="strong"><img src="/deezer-v1/img/yes_grey.png" alt="+" width="20px"> 73 millions de titres</p>
+                        </li>
+                        <br>
+                        <li>                           
+                            <p class="strong"><img src="/deezer-v1/img/yes_grey.png" alt="+" width="20px"> Lecture aléatoire</p>
+                        </li>
+                        <br>
+                        <li>                           
+                            <p class="tarif_no"><img src="/deezer-v1/img/no_grey.png" alt="-" width="20px"> Sans publicité</p>
+                        </li>
+                        <br>
+                        <li>                            
+                            <p class="tarif_no"><img src="/deezer-v1/img/no_grey.png" alt="-" width="20px"> Zappez en illimité</p>
+                        </li>
+                        <br>
+                        <li>
+                            <p class="tarif_no"><img src="/deezer-v1/img/no_grey.png" alt="-" width="20px"> Mode hors connexion</p>
+                        </li>
+                        <br>
+                        <li>
+                            <p class="tarif_no"><img src="/deezer-v1/img/no_grey.png" alt="-" width="20px"> 6 comptes</p>
+                        </li><br>
+                    </ul>
+                    <button class="signup">S'inscrire</button>
+                    <a class="plusinfo" href="">Plus d'infos</a>
+                </article>
+
+
+                <article class="tarif_premium">
+                    <h3 class="gratuit_title">Deezer Premium</h3>
+                    <h3 class="gratuit_price">9,99 €</h3>
+                    <p class="gratuit_month">/mois</p>
+                    <ul class="whitecontent">
+                        <li>                           
+                            <p class="strong"><img src="/deezer-v1/img/yes_white.png" alt="+" width="20px"> 73 millions de titres</p>
+                        </li>
+                        <br>
+                        <li>                           
+                            <p class="strong"><img src="/deezer-v1/img/yes_white.png" alt="+" width="20px"> Lecture aléatoire</p>
+                        </li>
+                        <br>
+                        <li>                           
+                            <p class="strong"><img src="/deezer-v1/img/yes_white.png" alt="-" width="20px"> Sans publicité</p>
+                        </li>
+                        <br>
+                        <li>                            
+                            <p class="strong"><img src="/deezer-v1/img/yes_white.png" alt="-" width="20px"> Zappez en illimité</p>
+                        </li>
+                        <br>
+                        <li>
+                            <p class="strong"><img src="/deezer-v1/img/yes_white.png" alt="-" width="20px"> Mode hors connexion</p>
+                        </li>
+                        <br>
+                        <li>
+                            <p class="tarif_no"><img src="/deezer-v1/img/no_white.png" alt="-" width="20px"> 6 comptes</p>
+                        </li><br>
+                    </ul>
+                    <p class="offert_white">3 mois offert</p>
+                    <button class="signup">J'en profite</button>
+                    <a class="plusinfo_white" href="">Plus d'infos</a>
+                </article>
+
+
+                <article class="famille">
+                    <h3 class="gratuit_title">Deezer famille</h3>
+                    <h3 class="gratuit_price">14,99 €</h3>
+                    <p class="gratuit_month">/mois</p>
+                    <ul class="greycontent">
+                        <li>                           
+                            <p class="strong"><img src="/deezer-v1/img/yes_grey.png" alt="+" width="20px"> 73 millions de titres</p>
+                        </li>
+                        <br>
+                        <li>                           
+                            <p class="strong"><img src="/deezer-v1/img/yes_grey.png" alt="+" width="20px"> Lecture aléatoire</p>
+                        </li>
+                        <br>
+                        <li>                           
+                            <p class="strong"><img src="/deezer-v1/img/yes_grey.png" alt="-" width="20px"> Sans publicité</p>
+                        </li>
+                        <br>
+                        <li>                            
+                            <p class="strong"><img src="/deezer-v1/img/yes_grey.png" alt="-" width="20px"> Zappez en illimité</p>
+                        </li>
+                        <br>
+                        <li>
+                            <p class="strong"><img src="/deezer-v1/img/yes_grey.png" alt="-" width="20px"> Mode hors connexion</p>
+                        </li>
+                        <br>
+                        <li>
+                            <p class="strong"><img src="/deezer-v1/img/yes_grey.png" alt="-" width="20px"> 6 comptes</p>
+                        </li><br>
+                    </ul>
+                    <p class="offert">1 mois offert</p>
+                    <button class="signup">J'en profite</button>
+                    <a class="plusinfo" href="">Plus d'infos</a>
+                </article>
+            </div>    
+            <p class="tarif_info">Ces offres sont sans engagement: vous pouvez résilier votre abonnement à tout moment. Ces offres sont réservées aux utilisateurs n'ayant été abonnés à aucune autre offre Deezer, n'ayant jamais bénéficié d'une offre promotionnelle Deezer et d'aucun essai au service gratuit au préalable à tout moment. Ces offres ne sont cumulables avec aucune autre offre. Ces offres ne sont valables qu'une seule fois par utilisateur.</p>
         </section>
 
-        <section>
-            <article></article>
-            <article></article>
-            <article></article>
+        <section class="more_info">
+            <div>
+
+                <article>
+                <h3>Abonnement annuel <span class="discount">-25%</span></h3>
+                <p>Un an d'abonnement à Deezer Premium pour 89,90 € au lieu de 119,88 €.</p>
+                <a href="#">En savoir plus</a>
+                </article>
+                <article>
+                <button class="more_btn">S'abonner</button>
+                </article>
+
+            </div>
+
+
+            <div>
+                <article>
+                <h3>Deezer HiFi</h3>
+                <p>Un son authentique pour 14,99 €/mois, 1 mois offert</p>
+                </article>
+                <article>
+                <button class="more_btn">En savoir plus</button>
+                </article>
+            </div>
+
+            <div>
+                <article>
+                <h3>Deezer Étudiant <span class="discount">-50%</span></h3>
+                <p>Premium pour seulement 4,99 €/mois, 3 mois offert</p>
+                </article>
+                <article>
+                <button class="more_btn">En savoir plus</button>
+                </article>
+            </div>
         </section>
 
     </main>
 
-    <footer></footer>
+    <footer>
+
+        <div class="download">
+            <article>
+               <a href="#"><img src="/deezer-v1/img/appstore.png" alt="" width="150px"></a>
+               <a href="#"><img src="/deezer-v1/img/googleplay.png" alt="" width="150px"></a>
+            </article>
+        </div>
+
+        <div class="footer_links">
+            <article>
+                <ul>
+                <li>
+                <a class="links_title"href="#">Deezer</a>
+                </li>
+                <li>
+                <a href="#">Offres</a>
+                </li>
+                <li>
+                <a href="#">Fonctionnalités</a>
+                </li>
+                <li>
+                <a href="#">Appareils</a>
+                </li>
+                <li>
+                <a href="#">Aide</a>
+                </li>
+                <li>
+                <a href="#">À propos</a>
+                </li>
+                <li>
+                <a href="#">Carrières</a>
+                </li>
+                </ul>
+            </article>
+
+            <article>
+                <ul>
+                <li>
+                <a class="links_title" href="#">Explorer</a>
+                </li>
+                <li>
+                <a href="#">Tous les univers</a>
+                </li>
+                <li>
+                <a href="#">Top écoutes</a>
+                </li>
+                <li>
+                <a href="#">Sortie la plus populaire</a>
+                </li>
+                <li>
+                <a href="#">Nouveautés</a>
+                </li>
+                <li>
+                <a href="#">On reste à la maison</a>
+                </li>
+                </ul>
+            </article>
+
+            <article>
+                <ul>
+                <li>
+                <a class="links_title" href="#">Qui sommes-nous ?</a>
+                </li>
+                <li>
+                <a href="#">Musiciens et podcasteurs</a>
+                </li>
+                <li>
+                <a href="#">Développeurs</a>
+                </li>
+                <li>
+                <a href="#">Presse</a>
+                </li>
+                </ul>
+            </article>
+
+            <article>
+                <ul>
+                <li>
+                <a class="links_title" href="#">Légal</a>
+                </li>
+                <li>
+                <a href="#">Mentions légales</a>
+                </li>
+                <li>
+                <a href="#">Conditions générales d'utilisation</a>
+                </li>
+                <li>
+                <a href="#">Politique de protection des données</a>
+                </li>
+                <li>
+                <a href="#">Cookies</a>
+                </li>
+                </ul>
+            </article>
+
+        </div>
+
+        <div class="social">
+            <article class="social_links"> 
+            <a href=""><img src="/deezer-v1/img/fb.png" alt="facebook" width="25px"></a>
+            <a href=""><img src="/deezer-v1/img/insta.png" alt="instagram" width="25px"></a>
+            <a href=""><img src="/deezer-v1/img/tw.png" alt="twitter" width="25px"></a>
+            <a href=""><img src="/deezer-v1/img/yt.png" alt="youtube" width="25px"></a>
+            </article>
+            <img src="/deezer-v1/img/logo_white.png" alt="logo" width="200px">
+            <article class="copyright">
+                © 2021 Deezer <select>
+                    <option>France</option>
+                    <option>English</option>
+                  </select>
+            </article>
+
+        </div>
+    </footer>
 
 </body>
 </html>
