--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/deezer-v1/img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
     <title>Deezer</title>
 </head>
 <body>
     
     <header>
-            <a href="#"><img class="logo" src="img/logo.png" alt="Logo" width="150px"></a>
+            <a href="#"><img class="logo" src="./img/logo.png" alt="Logo" width="150px"></a>
             <ul>
                 <li><a href="#">Télécharger</a></li>
                 <li><a href="#">Offres</a></li>
@@ -34,13 +34,13 @@
                 <button class="btn_red">Deezer Premium</button>
                 <button class="btn_red">Deezer Gratuit</button>
                 </span>   
-                <img src="/deezer-v1/img/hero.png" alt="hero" width="650px">
+                <img src="./img/hero.png" alt="hero" width="650px">
             </article>
         </section>
 
         <section class="phone">
             <div class="container">
-                <img src="/deezer-v1/img/phone.jpg" alt="Phone" width="250px">
+                <img src="./img/phone.jpg" alt="Phone" width="250px">
                     <h2>Deezer, c'est quoi ?</h2>
                      <div class="phone_text">
                         <article>
@@ -66,12 +66,12 @@
         <section class="icons">
             <article class="container_ic">
             <article class="icons_inner">
-                <img src="/deezer-v1/img/laptop.png" alt="Laptop" width="50px">
-                <img src="/deezer-v1/img/device.png" alt="Device" width="50px">
-                <img src="/deezer-v1/img/watch.png" alt="Watch" width="50px">
-                <img src="/deezer-v1/img/loudspeaker.png" alt="Speakers" width="50px">
-                <img src="/deezer-v1/img/tv-monitor.png" alt="TV" width="50px">
-                <img src="/deezer-v1/img/electric-car.png" alt="Car" width="50px">
+                <img src="./img/laptop.png" alt="Laptop" width="50px">
+                <img src="./img/device.png" alt="Device" width="50px">
+                <img src="./img/watch.png" alt="Watch" width="50px">
+                <img src="./img/loudspeaker.png" alt="Speakers" width="50px">
+                <img src="./img/tv-monitor.png" alt="TV" width="50px">
+                <img src="./img/electric-car.png" alt="Car" width="50px">
             </article>
             <article class="text">
                     <h2>Toujours avec vous</h2><br>
@@ -84,7 +84,7 @@
             <article class="tarif_title">
                 <h3>Profitez de votre musique</h3>
                 <p>recommandé</p>
-                <img src="/deezer-v1/img/down.png" alt="Down" width="20px">
+                <img src="./img/down.png" alt="Down" width="20px">
             </article>       
             <div class="tarif_desc">
 
@@ -94,27 +94,27 @@
                     <p class="gratuit_month">/mois</p>
                     <ul class="greycontent gratuit_margin" class="gratuit_ul">
                         <li>                           
-                            <p class="strong"><img src="/deezer-v1/img/yes_grey.png" alt="+" width="20px"> 73 millions de titres</p>
+                            <p class="strong"><img src="./img/yes_grey.png" alt="+" width="20px"> 73 millions de titres</p>
                         </li>
                         <br>
                         <li>                           
-                            <p class="strong"><img src="/deezer-v1/img/yes_grey.png" alt="+" width="20px"> Lecture aléatoire</p>
+                            <p class="strong"><img src="./img/yes_grey.png" alt="+" width="20px"> Lecture aléatoire</p>
                         </li>
                         <br>
                         <li>                           
-                            <p class="tarif_no"><img src="/deezer-v1/img/no_grey.png" alt="-" width="20px"> Sans publicité</p>
+                            <p class="tarif_no"><img src="./img/no_grey.png" alt="-" width="20px"> Sans publicité</p>
                         </li>
                         <br>
                         <li>                            
-                            <p class="tarif_no"><img src="/deezer-v1/img/no_grey.png" alt="-" width="20px"> Zappez en illimité</p>
+                            <p class="tarif_no"><img src="./img/no_grey.png" alt="-" width="20px"> Zappez en illimité</p>
                         </li>
                         <br>
                         <li>
-                            <p class="tarif_no"><img src="/deezer-v1/img/no_grey.png" alt="-" width="20px"> Mode hors connexion</p>
+                            <p class="tarif_no"><img src="./img/no_grey.png" alt="-" width="20px"> Mode hors connexion</p>
                         </li>
                         <br>
                         <li>
-                            <p class="tarif_no"><img src="/deezer-v1/img/no_grey.png" alt="-" width="20px"> 6 comptes</p>
+                            <p class="tarif_no"><img src="./img/no_grey.png" alt="-" width="20px"> 6 comptes</p>
                         </li><br>
                     </ul>
                     <button class="signup">S'inscrire</button>
@@ -128,27 +128,27 @@
                     <p class="gratuit_month">/mois</p>
                     <ul class="whitecontent">
                         <li>                           
-                            <p class="strong"><img src="/deezer-v1/img/yes_white.png" alt="+" width="20px"> 73 millions de titres</p>
+                            <p class="strong"><img src="./img/yes_white.png" alt="+" width="20px"> 73 millions de titres</p>
                         </li>
                         <br>
                         <li>                           
-                            <p class="strong"><img src="/deezer-v1/img/yes_white.png" alt="+" width="20px"> Lecture aléatoire</p>
+                            <p class="strong"><img src="./img/yes_white.png" alt="+" width="20px"> Lecture aléatoire</p>
                         </li>
                         <br>
                         <li>                           
-                            <p class="strong"><img src="/deezer-v1/img/yes_white.png" alt="-" width="20px"> Sans publicité</p>
+                            <p class="strong"><img src="./img/yes_white.png" alt="-" width="20px"> Sans publicité</p>
                         </li>
                         <br>
                         <li>                            
-                            <p class="strong"><img src="/deezer-v1/img/yes_white.png" alt="-" width="20px"> Zappez en illimité</p>
+                            <p class="strong"><img src="./img/yes_white.png" alt="-" width="20px"> Zappez en illimité</p>
                         </li>
                         <br>
                         <li>
-                            <p class="strong"><img src="/deezer-v1/img/yes_white.png" alt="-" width="20px"> Mode hors connexion</p>
+                            <p class="strong"><img src="./img/yes_white.png" alt="-" width="20px"> Mode hors connexion</p>
                         </li>
                         <br>
                         <li>
-                            <p class="tarif_no"><img src="/deezer-v1/img/no_white.png" alt="-" width="20px"> 6 comptes</p>
+                            <p class="tarif_no"><img src="./img/no_white.png" alt="-" width="20px"> 6 comptes</p>
                         </li><br>
                     </ul>
                     <p class="offert_white">3 mois offert</p>
@@ -163,27 +163,27 @@
                     <p class="gratuit_month">/mois</p>
                     <ul class="greycontent">
                         <li>                           
-                            <p class="strong"><img src="/deezer-v1/img/yes_grey.png" alt="+" width="20px"> 73 millions de titres</p>
+                            <p class="strong"><img src="./img/yes_grey.png" alt="+" width="20px"> 73 millions de titres</p>
                         </li>
                         <br>
                         <li>                           
-                            <p class="strong"><img src="/deezer-v1/img/yes_grey.png" alt="+" width="20px"> Lecture aléatoire</p>
+                            <p class="strong"><img src="./img/yes_grey.png" alt="+" width="20px"> Lecture aléatoire</p>
                         </li>
                         <br>
                         <li>                           
-                            <p class="strong"><img src="/deezer-v1/img/yes_grey.png" alt="-" width="20px"> Sans publicité</p>
+                            <p class="strong"><img src="./img/yes_grey.png" alt="-" width="20px"> Sans publicité</p>
                         </li>
                         <br>
                         <li>                            
-                            <p class="strong"><img src="/deezer-v1/img/yes_grey.png" alt="-" width="20px"> Zappez en illimité</p>
+                            <p class="strong"><img src="./img/yes_grey.png" alt="-" width="20px"> Zappez en illimité</p>
                         </li>
                         <br>
                         <li>
-                            <p class="strong"><img src="/deezer-v1/img/yes_grey.png" alt="-" width="20px"> Mode hors connexion</p>
+                            <p class="strong"><img src="./img/yes_grey.png" alt="-" width="20px"> Mode hors connexion</p>
                         </li>
                         <br>
                         <li>
-                            <p class="strong"><img src="/deezer-v1/img/yes_grey.png" alt="-" width="20px"> 6 comptes</p>
+                            <p class="strong"><img src="./img/yes_grey.png" alt="-" width="20px"> 6 comptes</p>
                         </li><br>
                     </ul>
                     <p class="offert">1 mois offert</p>
@@ -236,8 +236,8 @@
 
         <div class="download">
             <article>
-               <a href="#"><img src="/deezer-v1/img/appstore.png" alt="" width="150px"></a>
-               <a href="#"><img src="/deezer-v1/img/googleplay.png" alt="" width="150px"></a>
+               <a href="#"><img src="./img/appstore.png" alt="" width="150px"></a>
+               <a href="#"><img src="./img/googleplay.png" alt="" width="150px"></a>
             </article>
         </div>
 
@@ -332,12 +332,12 @@
 
         <div class="social">
             <article class="social_links"> 
-            <a href=""><img src="/deezer-v1/img/fb.png" alt="facebook" width="25px"></a>
-            <a href=""><img src="/deezer-v1/img/insta.png" alt="instagram" width="25px"></a>
-            <a href=""><img src="/deezer-v1/img/tw.png" alt="twitter" width="25px"></a>
-            <a href=""><img src="/deezer-v1/img/yt.png" alt="youtube" width="25px"></a>
+            <a href=""><img src="./img/fb.png" alt="facebook" width="25px"></a>
+            <a href=""><img src="./img/insta.png" alt="instagram" width="25px"></a>
+            <a href=""><img src="./img/tw.png" alt="twitter" width="25px"></a>
+            <a href=""><img src="./img/yt.png" alt="youtube" width="25px"></a>
             </article>
-            <img src="/deezer-v1/img/logo_white.png" alt="logo" width="200px">
+            <img src="./img/logo_white.png" alt="logo" width="200px">
             <article class="copyright">
                 © 2021 Deezer <select>
                     <option>France</option>
