--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <header>
             <a href="#"><img class="logo" src="./img/logo.png" alt="Logo" width="150px"></a>
-            <ul>
+            <ul class="nav">
                 <li><a href="#">Télécharger</a></li>
                 <li><a href="#">Offres</a></li>
                 <li><a class="btn" href="#">Connexion</a></li>
@@ -28,13 +28,13 @@
 
         <section> 
             <article class="premium">
-                <h1 class="premium_titre">Vos émotions méritent d'avoir leur musique.</h1>
-                <h2 class="premium_desc">Profitez de 3 mois offerts pour essayer Deezer Premium*</h2>
-                <span>
+                <span class="prem_block">
+                <h1 class="premium_titre">Vos émotions méritent <br> d'avoir leur musique.</h1>
+                <h2 class="premium_desc">Profitez de 3 mois offerts pour<br> essayer Deezer Premium*</h2>
                 <button class="btn_red">Deezer Premium</button>
                 <button class="btn_red">Deezer Gratuit</button>
-                </span>   
-                <img src="./img/hero.png" alt="hero" width="650px">
+                </span>     
+                <!-- <img src="./img/hero.png" alt="hero" width="650px"> -->
             </article>
         </section>
 
@@ -84,7 +84,7 @@
             <article class="tarif_title">
                 <h3>Profitez de votre musique</h3>
                 <p>recommandé</p>
-                <img src="./img/down.png" alt="Down" width="20px">
+                <img class="rec_down" src="./img/down.png" alt="Down" width="20px">
             </article>       
             <div class="tarif_desc">
 
@@ -120,6 +120,11 @@
                     <button class="signup">S'inscrire</button>
                     <a class="plusinfo" href="">Plus d'infos</a>
                 </article>
+
+                <span class="rec">
+                    <p>recommandé</p>
+                    <img src="./img/down.png" alt="Down" width="20px">
+                </span>
 
 
                 <article class="tarif_premium">
